refactor: remove successes from result

--- a/src/Results.Immutable.Tests/Results.Immutable.Tests.csproj
+++ b/src/Results.Immutable.Tests/Results.Immutable.Tests.csproj
@@ -30,6 +30,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Results.Immutable\Results.Immutable.csproj" />
+    <Compile Remove="ResultProjectionTests.cs" />
+    <Compile Remove="ResultTests.cs" />
   </ItemGroup>
 
 </Project>
