--- a/src/Results.Immutable/Results.Immutable.csproj
+++ b/src/Results.Immutable/Results.Immutable.csproj
@@ -4,11 +4,13 @@
     <TargetFrameworks>net6.0;net7.0</TargetFrameworks>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-	<IsPackable>true</IsPackable>
+	  <IsPackable>true</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
     <Folder Include="Projections\Option\" />
+    <Compile Remove="Projections/Result/SelectMany.cs" />
+    <Compile Remove="Extensions/ResultEnumerableExtensions.cs" />
   </ItemGroup>
 
 </Project>
