--- a/.github/workflows/ci-pull-request.yml
+++ b/.github/workflows/ci-pull-request.yml
@@ -2,8 +2,9 @@ name: PR build
 
 on:
   pull_request:
-    branches: [ "main" ]
-    paths: [ "src/**/*" ]
+    branches: ["main"]
+    paths: ["src/**/*"]
+  workflow_dispatch:
 
 permissions:
   pull-requests: write
@@ -35,21 +36,21 @@ jobs:
       - name: Test & analyze coverage
         run: dotnet test Results.Immutable.sln --no-build --collect:"XPlat Code Coverage" --results-directory ./coverage
         working-directory: src
-
-      - name: Coverage Summary Report
+        
+      - name: Check code coverage
         uses: irongut/CodeCoverageSummary@v1.3.0
         with:
-          filename: src/coverage/**/coverage.cobertura.xml
-          badge: true
-          fail_below_min: true
-          format: markdown
-          hide_complexity: true
-          output: both
-          thresholds: '80 95'
-
-      - name: Add Coverage PR Comment
-        uses: marocchino/sticky-pull-request-comment@v2
-        if: github.event_name == 'pull_request'
+            filename: src/coverage/**/coverage.cobertura.xml
+            badge: true
+            fail_below_min: true
+            format: text
+            hide_complexity: true
+            output: console
+            thresholds: '80 95'
+            
+      - name: Generate code coverage report
+        uses: danielpalme/ReportGenerator-GitHub-Action@5.1.22
         with:
-          recreate: true
-          path: code-coverage-results.md
+          reports: src/coverage/**/cobertura.xml
+          targetdir: coveragereport
+          reporttypes: MarkdownSummaryGithub
