chore: #29 add code change to trigger the workflow

--- a/.github/workflows/ci-pull-request.yml
+++ b/.github/workflows/ci-pull-request.yml
@@ -34,23 +34,16 @@ jobs:
         working-directory: src
 
       - name: Test & analyze coverage
-        run: dotnet test Results.Immutable.sln --no-build --collect:"XPlat Code Coverage" --results-directory ./coverage
-        working-directory: src
-        
-      - name: Check code coverage
-        uses: irongut/CodeCoverageSummary@v1.3.0
+        run: dotnet test -c Debug -p:coverletOutput=../coverage/lcov.info -p:CollectCoverage=true -p:CoverletOutputFormat=lcov -p:Exclude=\"\" src/**/*[Tt]ests.csproj
+
+      - name: Generate code coverage report (.NET 6.0)
+        uses: romeovs/lcov-reporter-action@v0.3.1
         with:
-            filename: src/coverage/**/coverage.cobertura.xml
-            badge: true
-            fail_below_min: true
-            format: text
-            hide_complexity: true
-            output: console
-            thresholds: '80 95'
-            
-      - name: Generate code coverage report
-        uses: danielpalme/ReportGenerator-GitHub-Action@5.1.22
+          lcov-file: ./src/coverage/lcov.net6.0.info
+          title: Code coverage summary (.NET 6)
+      
+      - name: Generate code coverate report (.NET 7.0)
+        uses: romeovs/lcov-reporter-action@v0.3.1
         with:
-          reports: src/coverage/**/cobertura.xml
-          targetdir: coveragereport
-          reporttypes: MarkdownSummaryGithub
+          lcov-file: ./src/coverage/lcov.net7.0.info
+          title: Code coverage summary (.NET 7)
