--- a/src/Results.Immutable/Results.Immutable.csproj
+++ b/src/Results.Immutable/Results.Immutable.csproj
@@ -1,14 +1,13 @@
+<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <TargetFrameworks>net6.0;net7.0</TargetFrameworks>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <IsPackable>true</IsPackable>
+    <Version>0.0.0</Version>
   </PropertyGroup>
-
   <ItemGroup>
     <Folder Include="Projections\Option\"/>
   </ItemGroup>
-
 </Project>
