--- a/src/Results.Immutable.Tests/Results.Immutable.Tests.csproj
+++ b/src/Results.Immutable.Tests/Results.Immutable.Tests.csproj
@@ -9,8 +9,8 @@
 
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="6.8.0" />
-    <PackageReference Include="FsCheck" Version="2.16.5" />
-    <PackageReference Include="FsCheck.Xunit" Version="2.16.5" />
+    <PackageReference Include="FsCheck" Version="3.0.0-rc1" />
+    <PackageReference Include="FsCheck.Xunit" Version="3.0.0-rc1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
