--- a/.github/workflows/ci-pull-request.yml
+++ b/.github/workflows/ci-pull-request.yml
@@ -12,6 +12,9 @@ permissions:
 
 jobs:
   build:
+    strategy:
+      matrix:
+        version: ['6.0', '7.0']
     name: PR build
     runs-on: ubuntu-latest
     steps:
@@ -20,9 +23,7 @@ jobs:
       - name: Setup dotnet
         uses: actions/setup-dotnet@v3
         with:
-          dotnet-version: |
-            6.x
-            7.x
+          dotnet-version: ${{ matrix.version }}
           dotnet-quality: 'ga'
 
       - name: Install dependencies
@@ -30,20 +31,21 @@ jobs:
         working-directory: src
 
       - name: Build
-        run: dotnet build Results.Immutable.sln --configuration Debug --no-restore
+        run: dotnet build Results.Immutable.sln --configuration Debug --no-restore -f net${{ matrix.version }}
         working-directory: src
 
       - name: Test & analyze coverage
-        run: dotnet test -c Debug -p:coverletOutput=../coverage/lcov.info -p:CollectCoverage=true -p:CoverletOutputFormat=lcov -p:Exclude=\"\" src/**/*[Tt]ests.csproj
+        run: dotnet test -c Debug -f net${{ matrix.version }} -p:coverletOutput=../coverage/lcov.info -p:CollectCoverage=true -p:CoverletOutputFormat=lcov -p:Exclude=\"\" **/*[Tt]ests.csproj
+        working-directory: src
 
-      - name: Generate code coverage report (.NET 6.0)
-        uses: romeovs/lcov-reporter-action@v0.3.1
+      - name: Setup LCOV
+        uses: hrishikesh-kadam/setup-lcov@v1
+
+      - name: Record LCOV
+        uses: zgosalvez/github-actions-report-lcov@v4.1.2
         with:
-          lcov-file: ./src/coverage/lcov.net6.0.info
-          title: Code coverage summary (.NET 6)
-      
-      - name: Generate code coverate report (.NET 7.0)
-        uses: romeovs/lcov-reporter-action@v0.3.1
-        with:
-          lcov-file: ./src/coverage/lcov.net7.0.info
-          title: Code coverage summary (.NET 7)
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          coverage-files: ./src/coverage/lcov.*.info
+          minimum-coverage: 85
+          update-comment: true
+    
