--- a/src/Results.Immutable/package.json
+++ b/src/Results.Immutable/package.json
@@ -4,6 +4,6 @@
   "version": "0.1.0-alpha.4",
   "packageManager": "yarn@3.5.0",
   "scripts": {
-    "version": "node ../../scripts/version.mjs; git add Results.Immutable.csproj"
+    "version": "node ../../scripts/version.mjs && git add Results.Immutable.csproj"
   }
 }
