--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   ],
   "scripts": {
     "test": "dotnet test src/Results.Immutable.sln",
-    "postinstall": "yarn husky install"
+    "postinstall": "yarn husky install",
+    "version": "yarn && git add yarn.lock"
   }
 }
