--- a/src/Results.Immutable.Extensions.FluentAssertions/Results.Immutable.Extensions.FluentAssertions.csproj
+++ b/src/Results.Immutable.Extensions.FluentAssertions/Results.Immutable.Extensions.FluentAssertions.csproj
@@ -5,6 +5,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="6.12.0"/>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0" PrivateAssets="All" />
   </ItemGroup>
   <PropertyGroup>
     <TargetFrameworks>net6.0;net7.0;net8.0</TargetFrameworks>
