docs: embed XML docs in packable projects

--- a/src/Results.Immutable.Extensions.FluentAssertions/Results.Immutable.Extensions.FluentAssertions.csproj
+++ b/src/Results.Immutable.Extensions.FluentAssertions/Results.Immutable.Extensions.FluentAssertions.csproj
@@ -14,5 +14,6 @@
     <IsPackable>true</IsPackable>
     <Version>0.1.0-alpha.2</Version>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
 </Project>
