--- a/src/Results.Immutable/Results.Immutable.csproj
+++ b/src/Results.Immutable/Results.Immutable.csproj
@@ -8,6 +8,7 @@
     <Version>1.0.0-alpha.1</Version>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <IsAotCompatible>true</IsAotCompatible>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0" PrivateAssets="All" />
