ci: fix versioning in CI to allow modifications of the lock

--- a/package.json
+++ b/package.json
@@ -18,6 +18,6 @@
   "scripts": {
     "test": "dotnet test src/Results.Immutable.sln",
     "postinstall": "yarn husky install",
-    "version": "yarn && git add yarn.lock"
+    "version": "yarn install --no-immutable && git add yarn.lock"
   }
 }
