--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -72,7 +72,7 @@ jobs:
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git config user.name "GitHub Action"
 
-      - name: Preview proposed versions
+      - name: Versioning
         run: |
           yarn lerna version -y --create-release github ${{ env.params }}
 
