--- a/src/Results.Immutable.Extensions.FluentAssertions/Results.Immutable.Extensions.FluentAssertions.csproj
+++ b/src/Results.Immutable.Extensions.FluentAssertions/Results.Immutable.Extensions.FluentAssertions.csproj
@@ -8,7 +8,7 @@
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0" PrivateAssets="All"/>
   </ItemGroup>
   <PropertyGroup>
-    <TargetFrameworks>net6.0;net7.0;net8.0</TargetFrameworks>
+    <TargetFrameworks>net6.0;net8.0</TargetFrameworks>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <IsPackable>true</IsPackable>
